--- a/gb/16/11/2/n8452779.md
+++ b/gb/16/11/2/n8452779.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mzixql3530/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mzixql3530/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mzixql3530/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mzixql3530/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mzixql3530/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mzixql3530/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mzixql3530/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>程晓容：中共贪官的房产和贾敬龙的眼泪</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2016年11月02日讯】黑夜里，<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E8%B4%BE%E6%95%AC%E9%BE%99.md#1">贾敬龙</a>的哭泣，有谁听见？2013年5月7日，河北石家庄市长安区北高营村村民贾敬龙正在装修的婚房，被村长何建华带人暴力拆除，贾敬龙被强拆者殴打。在他的旧屋的门洞里，曾经挂着“我爱我家”的镜框。房倒屋塌后，“我爱我家”和其他物品一起，被压在了废墟下。年轻的梦，也随之破灭。</p>
-<p><ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E8%B4%BE%E6%95%AC%E9%BE%99.md#1">贾敬龙</a>的悲剧，折射出大陆暴力强拆的乱象。有多少弱势无依的百姓，守不住脚下的寸土，眼睁睁的看着家园坍塌。不需豪华，但求平实，一个温馨的港湾，是千百万底层民众的奢望。</p>
-<p>10月31日，中共十八届六中全会档起草组成员、中央办公厅调研室巡视员邓茂生在北京出席一个解读六中全会传媒座谈会时提及，六中全会要求党员申报房产及婚姻情况，但并非要向社会公开。在这之前，陆媒曾报，习近平当局要求加大官员<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E8%B4%A2%E4%BA%A7%E7%94%B3%E6%8A%A5.md#1">财产申报</a>的抽查核实力度。</p>
-<p>在中国，官员财产公示总是遇到强大的阻力。前国务院总理温家宝之前曾多次提出财产公开，但遭遇特权利益集团的抵制。目前的规定是，副处级以上官员每年如实向组织报告婚姻、出国（境）、收入、房产、投资、配偶子女从业等14个方面的个人有关事项。然而，<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E8%B4%A2%E4%BA%A7%E7%94%B3%E6%8A%A5.md#1">财产申报</a>和和财产公示存在着巨大落差。</p>
-<p>据港媒报导，在中共十八届政治局常委中，<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>抗拒财产申报。中共“十八大”闭幕，<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>在老干部生活会上说：“我个人对财产、国籍等公开申报制没意见，但要考虑采取党纪、立法执行申报制会引发党内、社会上大混乱、大动荡、大字报、网路大批判，谁能承担。”</p>
+	<p>【大纪元2016年11月02日讯】黑夜里，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B4%BE%E6%95%AC%E9%BE%99.md#1">贾敬龙</a>的哭泣，有谁听见？2013年5月7日，河北石家庄市长安区北高营村村民贾敬龙正在装修的婚房，被村长何建华带人暴力拆除，贾敬龙被强拆者殴打。在他的旧屋的门洞里，曾经挂着“我爱我家”的镜框。房倒屋塌后，“我爱我家”和其他物品一起，被压在了废墟下。年轻的梦，也随之破灭。</p>
+<p><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B4%BE%E6%95%AC%E9%BE%99.md#1">贾敬龙</a>的悲剧，折射出大陆暴力强拆的乱象。有多少弱势无依的百姓，守不住脚下的寸土，眼睁睁的看着家园坍塌。不需豪华，但求平实，一个温馨的港湾，是千百万底层民众的奢望。</p>
+<p>10月31日，中共十八届六中全会档起草组成员、中央办公厅调研室巡视员邓茂生在北京出席一个解读六中全会传媒座谈会时提及，六中全会要求党员申报房产及婚姻情况，但并非要向社会公开。在这之前，陆媒曾报，习近平当局要求加大官员<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B4%A2%E4%BA%A7%E7%94%B3%E6%8A%A5.md#1">财产申报</a>的抽查核实力度。</p>
+<p>在中国，官员财产公示总是遇到强大的阻力。前国务院总理温家宝之前曾多次提出财产公开，但遭遇特权利益集团的抵制。目前的规定是，副处级以上官员每年如实向组织报告婚姻、出国（境）、收入、房产、投资、配偶子女从业等14个方面的个人有关事项。然而，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B4%A2%E4%BA%A7%E7%94%B3%E6%8A%A5.md#1">财产申报</a>和和财产公示存在着巨大落差。</p>
+<p>据港媒报导，在中共十八届政治局常委中，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%BC%A0%E9%AB%98%E4%B8%BD.md#1">张高丽</a>抗拒财产申报。中共“十八大”闭幕，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>在老干部生活会上说：“我个人对财产、国籍等公开申报制没意见，但要考虑采取党纪、立法执行申报制会引发党内、社会上大混乱、大动荡、大字报、网路大批判，谁能承担。”</p>
 <p>2013年初，浙江慈溪纪委常委杨智峰曾表示，推行官员财产的彻底公示，也要考虑社会接受度问题，他承认目前收入差距较大，会顾虑官员财产网上彻底公示后引起社会反弹，带来不稳定。</p>
 <p>为什么官员财产公示、甚至仅仅内部申报就会引发“不稳定”、“大动荡”、“大批判”？因为在大陆，贫富悬殊两重天！单单几个落马官员的房产拥有，便令人震惊无语。</p>
-<p>十几年前，海外媒体披露，<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>在印尼的巴厘岛有一栋豪宅。至于<ahref="https://github.com/mzixql3530/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>家族的惊人贪腐，早前已有多方报导。曾庆红之子曾伟曾经通过鲁能案侵吞700亿人民币，在澳洲购置千万美元的豪宅。</p>
+<p>十几年前，海外媒体披露，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>在印尼的巴厘岛有一栋豪宅。至于<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>家族的惊人贪腐，早前已有多方报导。曾庆红之子曾伟曾经通过鲁能案侵吞700亿人民币，在澳洲购置千万美元的豪宅。</p>
 <p>据港媒《争鸣》报导，在中共前军委副主席郭伯雄的赃物清单里，有住宅、商场62套（幢）；开发中、未开发土地11幅，面积7.5万平方米，其中7幅和徐才厚等共同占有。</p>
 <p>今年7月，港媒《动向》杂志报导了中共前军委副主席徐才厚及家属被查抄的资产清单，其中包括北京、济南、大连、无锡、上海、武汉、深圳、珠海等地物业21套。</p>
 <p>于铁义，黑龙江龙煤矿业控股集团有限责任公司物资供应分公司原副总经理，一家人在三亚、大连、青岛、厦门等全国各地的宜居城市拥有房产58套，其中很多别墅和豪宅于铁义从来没去过。他自己花费几百万公款，常年包下北京五星级酒店的总统套房。</p>
@@ -36,41 +36,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/10/26/n8431596.md#1">刘青：浅议中共必杀贾敬龙</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/10/27/n8434155.md#1">纸上建筑：是否要让贾敬龙成为下一个“英雄”？</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/10/27/n8434347.md#1">蔡慎坤：自媒体的影响力究竟有多大？</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/10/28/n8437898.md#1">老泉：一切都因为缺少文明的训练</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/10/26/n8431596.md#1">刘青：浅议中共必杀贾敬龙</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/10/27/n8434155.md#1">纸上建筑：是否要让贾敬龙成为下一个“英雄”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/10/27/n8434347.md#1">蔡慎坤：自媒体的影响力究竟有多大？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/10/28/n8437898.md#1">老泉：一切都因为缺少文明的训练</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048915.md#1" target="_blank">《苦菜花》人物原型的真实人生（6）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/7/n12794882.md#1">晚清人到地府办差 往来阴阳两界透天机</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12809837.md#1">【新闻看点】佩洛西挺方芳情人？库默丑闻井喷</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12809877.md#1">【横河直播】任正非5G骗了谁 民主党为何弃库默</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/13/n12809751.md#1">【探索时分】世界最强战列舰：密苏里号</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/13/n12808644.md#1">【拍案惊奇】李克强讲话再穿帮 马云行踪泄露</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12808270.md#1">传将步阿里后尘 腾讯市值1小时蒸发2554亿</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12808191.md#1">中共政协委员提小县合并 泄露官民比例1:5</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12810014.md#1">吴俊宏补办婚礼面子大 台语歌坛大咖齐聚祝贺</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12808151.md#1">买得越多单价越贵 陆女星戚薇惊觉网购被坑</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12811023.md#1">患抑郁症身材发福遭酸 马思纯高EQ回应</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12809909.md#1">郁方妙喻婚姻像本存折 谢祖武曝“让步”秘招</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12810818.md#1">杨紫着曳地长裙走红毯 裙?下露出黑色马丁靴</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/13/n12808611.md#1">他捕获大鱼宴请全村 吃完才知百万美元没了</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12808267.md#1">小腹凸不是因为胖？10秒动作 让肚子瘦下来</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/13/n12808835.md#1">巴西流浪狗罹患癌症 自己去找兽医看病</a></li>
-<li><a href="https://github.com/mzixql3530/djy/blob/master/gb/21/3/12/n12808139.md#1">强生疫苗是二等疫苗吗？优缺点一次看懂</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mzixql3530/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mzixql3530/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/2/n8452779.htm">程晓容：中共贪官的房产和贾敬龙的眼泪</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/2/n8452779.htm">程晓容：中共贪官的房产和贾敬龙的眼泪</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mzixql3530/djy/blob/master/gb/16/11/2/n8452779.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mzixql3530/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mzixql3530/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mzixql3530/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mzixql3530/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/11/2/n8452779.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
